chore: Rename appset name in applicationset.yaml

--- a/charts/appset-generator/templates/applicationset.yaml
+++ b/charts/appset-generator/templates/applicationset.yaml
@@ -4,7 +4,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: {{ $appset.name }}-appset
+  name: appset-{{ $appset.name }}
   namespace: argocd
 spec:
   goTemplate: true
